# grobid-client-python

./: MANIFEST.in  Readme.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-build.yml  ci-release.yml
grobid_client/: client.py  grobid_client.py
grobid_client/format/: TEI2LossyJSON.py  TEI2LossyJSON_cli.py  TEI2Markdown.py  TEI2Markdown_cli.py  __main__.py  validate_json_refs.py
tests/: test_grobid_client.py  test_integration.py
